--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -6,14 +7,14 @@ spec:
   replicas: 2
   selector:
     matchLabels:
-      app: us-predictor
+      app: api
   template:
     metadata:
       labels:
-        app: us-predictor
+        app: api
     spec:
       containers:
       - name: us-predictor
-        image: quay.io/christal09/us-predictor:0.1
+        image: quay.io/christal09/us-predictor:0.2
         ports:
         - containerPort: 5006
