--- a/deployment.yaml
+++ b/deployment.yaml
@@ -15,6 +15,6 @@ spec:
     spec:
       containers:
       - name: us-predictor
-        image: quay.io/christal09/us-predictor:test3
+        image: quay.io/christal09/us-predictor:0.10
         ports:
         - containerPort: 5006
